architecture-cinemaabyss-main/src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinemaabyss-ingress
  namespace: cinemaabyss
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: cinemaabyss.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 8000
      - path: /api/monolith
        pathType: Prefix
        backend:
          service:
            name: monolith
            port:
              number: 8080
      - path: /api/movies
        pathType: Prefix
        backend:
          service:
            name: movies-service
            port:
              number: 8081
      - path: /api/events
        pathType: Prefix
        backend:
          service:
            name: events-service
            port:
              number: 8082
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 8000
